Adding Vuetify + Some calls
